--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django
-neomodel
-django-neomodel
-whitenoise
+Django==3.2.9
+django-neomodel==0.0.7
+neo4j ==5.3.0
+neomodel==4.0.8
+whitenoise==6.2.0
